==> Yen-Lung-Huang/ARM-Microcontroller/[Middlewares]/FreeRTOS/FreeRTOSv202012.00/FreeRTOS/Demo/RX700_RX72N_EnvisionKit_IAR_e2studio_EWRX/src/FreeRTOS_Demo/Full_Demo/serial.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "serial.h"
#include "platform.h"
#include "r_dtc_rx_if.h"
#include "r_sci_rx_if.h"
#include "r_byteq_if.h"
#include "demo_specific_io.h"

xComPortHandle xSerialPortInitMinimal( unsigned long ulWantedBaud, unsigned portBASE_TYPE uxQueueLength )
{
    ( void ) ulWantedBaud;
    ( void ) uxQueueLength;

    /* Characters received from the UART are stored in this queue, ready to be
    received by the application.  ***NOTE*** Using a queue in this way is very
    convenient, but also very inefficient.  It can be used here because
    characters will only arrive slowly.  In a higher bandwidth system a circular
    RAM buffer or DMA should be used in place of this queue. */
    xRxQueue = xQueueCreate( uxQueueLength, sizeof( char ) );
    configASSERT( xRxQueue );

    /* Set interrupt priority. (Other UART settings had been initialized in the
    src/smc_gen/general/r_cg_hardware_setup.c.) */
    uint8_t ucInterruptPriority = configMAX_SYSCALL_INTERRUPT_PRIORITY - 1;
    R_SCI_Control( xSerialSciHandle, SCI_CMD_SET_RXI_PRIORITY, ( void * ) &ucInterruptPriority );
    R_SCI_Control( xSerialSciHandle, SCI_CMD_SET_TXI_PRIORITY, ( void * ) &ucInterruptPriority );

    /* Only one UART is supported, so it doesn't matter what is returned
    here. */
    return 0;
}

void vSerialPutString( xComPortHandle pxPort, const signed char * const pcString, unsigned short usStringLength )
{
const TickType_t xMaxBlockTime = pdMS_TO_TICKS( 5000 );

    /* Only one port is supported. */
    ( void ) pxPort;

    /* Don't send the string unless the previous string has been sent. */
    if( ( xSendingTask == NULL ) && ( usStringLength > 0 ) )
    {
        /* Ensure the calling task's notification state is not already
        pending. */
        xTaskNotifyStateClear( NULL );

        /* Store the handle of the transmitting task.  This is used to unblock
        the task when the transmission has completed. */
        xSendingTask = xTaskGetCurrentTaskHandle();

        /* Send the string using the Renesas API with a workaround. */
        if( usStringLength > 1 )
        {
            /* Set up Data Transfer Control. */
            dtc_cmd_arg_t xSerialTxDtcArg;
            dtc_transfer_data_cfg_t xSerialTxDtcConfig;

            xSerialTxDtcArg.act_src                   = U_DTC_UART_CLI_TX_ACT;
            xSerialTxDtcConfig.transfer_mode          = DTC_TRANSFER_MODE_NORMAL;
            xSerialTxDtcConfig.data_size              = DTC_DATA_SIZE_BYTE;
            xSerialTxDtcConfig.src_addr_mode          = DTC_SRC_ADDR_INCR;
            xSerialTxDtcConfig.dest_addr_mode         = DTC_DES_ADDR_FIXED;
            xSerialTxDtcConfig.response_interrupt     = DTC_INTERRUPT_AFTER_ALL_COMPLETE;
            xSerialTxDtcConfig.repeat_block_side      = DTC_REPEAT_BLOCK_SOURCE;
            xSerialTxDtcConfig.chain_transfer_enable  = DTC_CHAIN_TRANSFER_DISABLE;
            xSerialTxDtcConfig.chain_transfer_mode    = (dtc_chain_transfer_mode_t)0;
            xSerialTxDtcConfig.source_addr            = ( uint32_t ) pcString;
            xSerialTxDtcConfig.dest_addr              = ( uint32_t ) &U_DTC_UART_CLI_TX_DR;
            xSerialTxDtcConfig.transfer_count         = ( uint32_t ) usStringLength - 1;
            xSerialTxDtcArg.chain_transfer_nr         = 0;
            xSerialTxDtcArg.p_transfer_data           = &xSerialTxDtcInfo;
            xSerialTxDtcArg.p_data_cfg                = &xSerialTxDtcConfig;

            R_DTC_Create( xSerialTxDtcArg.act_src, &xSerialTxDtcInfo, &xSerialTxDtcConfig, 0 );
            R_DTC_Control( DTC_CMD_ACT_SRC_ENABLE, NULL, &xSerialTxDtcArg );
            R_SCI_Send( xSerialSciHandle, ( uint8_t * ) (pcString + usStringLength - 1), 1 );
        }
        else
        {
            R_SCI_Send( xSerialSciHandle, ( uint8_t * ) pcString, 1 );
        }

        /* Wait in the Blocked state (so not using any CPU time) until the
        transmission has completed. */
        ulTaskNotifyTake( pdTRUE, xMaxBlockTime );

        /* A breakpoint can be set here for debugging. */
        nop();
    }
}
